fix: add placemark and fixed map width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -951,7 +951,7 @@ template {
   .booking {
     width: 100%;
   }
-  .map {
+  #map {
     width: 100%;
   }
 }
